--- a/app/Homepage/homepage.css
+++ b/app/Homepage/homepage.css
@@ -115,7 +115,7 @@ body {
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #cccccc;
+    background-color: #cecbcb;
 }
 
 .profile-name {
