--- a/app/Homepage/homepage.css
+++ b/app/Homepage/homepage.css
@@ -4,7 +4,7 @@ body {
     font-family: Arial, sans-serif;
 }
 .main-container {
-    display: flex;
+
     height: 100vh;
     width: 100%;
 }
@@ -42,9 +42,7 @@ body {
 
 .main-content {
     margin-left: 60px;
-    display: flex;
     flex-direction: column;
-    align-items: center;
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
@@ -65,7 +63,7 @@ body {
 
 .search-bar {
     display: flex;
-    margin : 20px 0;
+    margin-left: 350px;
     align-items: center; /* Align items vertically */
     justify-content: center;
     background-color: #ddd;
@@ -128,6 +126,7 @@ body {
 .community-section {
     width: 100%;
     padding: 20px;
+    float : left;
     box-sizing: border-box;
 }
 
@@ -141,6 +140,7 @@ body {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
     gap: 20px;
+    float: left;
     margin-bottom: 20px;
 }
 
